fix overflow video and image and cleanup

--- a/css/activities.css
+++ b/css/activities.css
@@ -1,27 +1,25 @@
-.activities-title {
-  text-align: center;
-}
-
 .activity-card:hover .activity-img {
   transform: scale(1.1);
 }
 
 .activity-card {
   height: 8rem;
-  width: 20rem;
+  width: 100%;
   overflow: hidden;
   border-radius: 18px;
   display: flex;
-
-  width: 20rem;
-  height: 8rem;
   padding: 1rem;
   margin: 1rem auto;
-
   border: 1px solid #ccc;
+
   .activity-img {
-    width: 12rem;
-    height: 6rem;
+    width: 100%;
+    height: 100%;
+    max-width: 8rem;
+    max-height: 8rem;
+
+    object-fit: cover;
+    display: block;
     margin-right: 1rem;
     transition: transform 0.5s ease-in-out;
     border-radius: 12px;
@@ -36,10 +34,29 @@
     justify-content: start;
     padding: 0.5rem 0;
     font-weight: 500;
+    > span {
+      width: 100%;
+      text-align: left;
+    }
   }
 
   .activity-anchor-icon {
+    width: 2rem;
+    align-self: center;
     padding-left: 0.5rem;
+  }
+}
+.activity-info {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 0 1rem;
+  > blockquote {
+    text-align: center;
+    padding: 1rem;
+  }
+  .description {
+    padding: 1rem 0;
+    font-size: 0.9rem;
   }
 }
 
@@ -57,23 +74,23 @@
 }
 
 .activity-img {
-  width: 30rem;
-  height: 30rem;
+  width: 100%;
+  height: 100%;
+  max-height: 20rem;
   object-fit: cover;
   border-radius: 12px;
   display: block;
   margin: 0 auto;
 }
-.activity-info {
-  width: fit-content;
-  margin: 0 auto;
-  padding: 0 1rem;
-  > blockquote {
-    text-align: center;
-    padding: 1rem;
+
+@media screen and (min-width: 768px) {
+  .activity-img {
+    max-height: 30rem;
   }
-  .description {
-    padding: 1rem 0;
-    font-size: 0.9rem;
+  .activity-card {
+    max-width: 40rem;
+    .activity-img {
+      max-width: 8rem;
+    }
   }
 }
