--- a/css/advisor.css
+++ b/css/advisor.css
@@ -1,14 +1,6 @@
-.professor-img {
-  width: 30rem;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-  border-radius: 12px;
-}
-
 .professor-section {
-  margin: 0 auto;
-  width: fit-content;
+  margin: 1rem auto;
+  height: fit-content;
 
   .professor-name {
     text-align: center;
@@ -16,10 +8,33 @@
     font-weight: 500;
     padding: 1rem 0;
   }
-
+  .professor-img {
+    width: 100%;
+    height: 100%;
+    max-width: 30rem;
+    display: block;
+    margin: 0 auto;
+    border-radius: 12px;
+    object-fit: contain;
+  }
   & ul {
     list-style: disc;
 
     list-style-position: inside;
+  }
+}
+
+.advisor-container {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .advisor-container {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .professor-section {
+    margin: 1rem;
   }
 }
